Added a sample Weapon JSON as well and had the Armoury parse both sets

--- a/Monster Builder/Monster Builder.csproj
+++ b/Monster Builder/Monster Builder.csproj
@@ -15,7 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Armour.json">
+    <None Update="Armours.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Weapons.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
