Cleaned the Folder Strucutre up making a Data Folder and removing dead functions

--- a/Monster Builder Web API.csproj
+++ b/Monster Builder Web API.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="StartServer.bat.txt.bak" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
